--- a/app/src/main/res/drawable/shape_recharge_advertise_background.xml
+++ b/app/src/main/res/drawable/shape_recharge_advertise_background.xml
@@ -3,10 +3,11 @@
     <item android:width="158dp" android:height="158dp">
         <shape android:shape="rectangle">
             <gradient
+                android:type="linear"
                 android:angle="270"
-                android:endColor="#f5f8ff"
-                android:centerColor="#ebf1ff"
-                android:startColor="#e0e9ff" />
+                android:endColor="@color/f5f8ff"
+                android:centerColor="@color/ebf1ff"
+                android:startColor="@color/e0e9ff" />
         </shape>
     </item>
 </selector>
