--- a/app/src/main/res/layout/adapter_recharge.xml
+++ b/app/src/main/res/layout/adapter_recharge.xml
@@ -5,13 +5,12 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     app:cardCornerRadius="5dp"
-    app:cardElevation="0dp"
-    >
+    app:cardElevation="0dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/shape_recharge_advertise"
-
         android:orientation="vertical">
 
         <TextView
@@ -20,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="10元"
-            android:textColor="#333333"
+            android:textColor="@color/black_333333"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -32,13 +31,10 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="售9.95元"
-            android:textColor="#cccccc"
+            android:textColor="@color/gray_cccccc"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
