--- a/app/src/main/res/layout/widget_multiple_item_null.xml
+++ b/app/src/main/res/layout/widget_multiple_item_null.xml
@@ -7,7 +7,8 @@
     app:cardElevation="0dp"
     app:cardUseCompatPadding="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clContentAreaList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_rectangle19">
