--- a/app/src/main/res/layout/activity_recharge_page.xml
+++ b/app/src/main/res/layout/activity_recharge_page.xml
@@ -643,6 +643,7 @@
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
+                android:layout_marginTop="10dp"
                 android:background="@color/gray_200"
                 android:minHeight="?attr/actionBarSize"
                 android:paddingBottom="5dp"
