--- a/app/src/main/res/layout/view_group_custom_scratch_card.xml
+++ b/app/src/main/res/layout/view_group_custom_scratch_card.xml
@@ -2,100 +2,89 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="155dp">
+    android:layout_height="wrap_content">
 
 
+    <TextView
+        android:id="@+id/tvFlipCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="16dp"
+        android:text="赠送刮奖机会 1 次"
+        android:textColor="#333333"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvFlipCard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="16dp"
-            android:gravity="left"
-            android:text="赠送刮奖机会 1 次"
-            android:textColor="#333333"
-            android:textSize="14sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/cl4Tv8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="13dp"
+        android:text="累计剩余3次"
+        android:textColor="@color/black_999999"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
+        app:layout_constraintLeft_toRightOf="@id/tvFlipCard"
+        app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
 
-        <TextView
-            android:id="@+id/cl4Tv8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="13dp"
-            android:text="累计剩余3次"
-            android:textColor="#999999"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
-            app:layout_constraintLeft_toRightOf="@id/tvFlipCard"
-            app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
+    <ImageView
+        android:id="@+id/cl3Im2"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_marginEnd="3dp"
+        android:src="@drawable/refresh"
+        app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
+        app:layout_constraintRight_toLeftOf="@id/tvFlipCardChange"
+        app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
 
-        <ImageView
-            android:id="@+id/cl3Im2"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_marginRight="3dp"
-            android:src="@drawable/refresh"
-            app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
-            app:layout_constraintRight_toLeftOf="@id/tvFlipCardChange"
-            app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
-
-        <TextView
-            android:id="@+id/tvFlipCardChange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:text="再刮一次"
-            android:textColor="#999999"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/container"
-    android:layout_width="310dp"
-    android:layout_height="107dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
-    android:orientation="horizontal"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/tvFlipCard">
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvFlipCardChange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:text="再刮一次"
+        android:textColor="#999999"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/tvFlipCard"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvFlipCard" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/close"
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="107dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="10dp"
         android:orientation="horizontal"
+        app:layout_constraintDimensionRatio="334:107"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvFlipCard">
+        app:layout_constraintTop_toBottomOf="@id/tvFlipCard" />
 
         <ImageView
             android:id="@+id/imageHand"
             android:layout_width="132dp"
             android:layout_height="43dp"
             android:src="@drawable/button2"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/container"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/container" />
 
         <ImageView
             android:id="@+id/imageHand2"
             android:layout_width="43dp"
             android:layout_height="43dp"
-            android:layout_marginLeft="120dp"
+            android:layout_marginStart="120dp"
             android:layout_marginTop="25dp"
             android:src="@drawable/hand"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/container"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toTopOf="@id/container" />
 </androidx.constraintlayout.widget.ConstraintLayout>
