--- a/app/src/main/res/layout/activity_recharge_page.xml
+++ b/app/src/main/res/layout/activity_recharge_page.xml
@@ -671,13 +671,13 @@
 
                 </com.google.android.material.appbar.AppBarLayout>
 
-                <androidx.core.widget.NestedScrollView
+               <!-- <androidx.core.widget.NestedScrollView
                     android:id="@+id/nestedScrollView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layout_anchorGravity="bottom"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
+-->
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/viewPager2"
                         android:layout_width="match_parent"
@@ -687,7 +687,7 @@
                         android:nestedScrollingEnabled="false"
                         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-                </androidx.core.widget.NestedScrollView>
+               <!-- </androidx.core.widget.NestedScrollView>-->
 
             </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
