--- a/app/src/main/res/layout/fragment_recharge_waterfall.xml
+++ b/app/src/main/res/layout/fragment_recharge_waterfall.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     >
 
     <com.google.android.material.tabs.TabLayout
@@ -12,24 +13,20 @@
         android:background="@color/gray_200"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/Theme.AppCompat"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_isSticky="true"
         app:tabIndicatorHeight="0dp"
         app:tabMinWidth="50dp"
+        android:visibility="gone"
         app:tabMode="scrollable"
          />
 
 
-    <com.example.myapplication.recharge.widget.AppbarLayoutRecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvComponentsWaterfall"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_height="match_parent"
     />
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
