--- a/app/src/main/res/layout/fragment_recharge_waterfall.xml
+++ b/app/src/main/res/layout/fragment_recharge_waterfall.xml
@@ -21,7 +21,8 @@
          />
 
 
-    <androidx.recyclerview.widget.RecyclerView
+
+    <com.example.myapplication.recharge.widget.AppbarLayoutRecyclerView
         android:id="@+id/rvComponentsWaterfall"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
