--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -13,6 +13,15 @@
         app:cardSrcCopy="@drawable/card2"
         tools:ignore="MissingConstraints" />
 
+   <!-- <com.gongwen.marqueen.MarqueeView
+        android:id="@+id/marqueeView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />-->
+
     <com.example.myapplication.recharge.view.CustomFlipCardViewGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
