--- a/app/src/main/res/layout/fragment_recharge_waterfall.xml
+++ b/app/src/main/res/layout/fragment_recharge_waterfall.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
 
-    <com.google.android.material.tabs.TabLayout
+    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/gray_200"
+        app:srlFooterTranslationViewId="@+id/rvComponentsWaterfall">
+
+        <com.scwang.smart.refresh.header.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+<!--    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -16,17 +29,21 @@
         app:layout_isSticky="true"
         app:tabIndicatorHeight="0dp"
         app:tabMinWidth="50dp"
+        android:visibility="gone"
         app:tabMode="scrollable"
-         />
+         />-->
 
 
 
-    <com.example.myapplication.recharge.widget.AppbarLayoutRecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvComponentsWaterfall"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
     />
+        <com.scwang.smart.refresh.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
 
-
-</LinearLayout>
+</androidx.core.widget.NestedScrollView>
