--- a/app/src/main/res/layout/fragment_recharge_waterfall.xml
+++ b/app/src/main/res/layout/fragment_recharge_waterfall.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
 
-    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+   <!-- <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +17,7 @@
 
         <com.scwang.smart.refresh.header.ClassicsHeader
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" />-->
 
 <!--    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -40,10 +40,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
     />
-        <com.scwang.smart.refresh.footer.ClassicsFooter
+      <!--  <com.scwang.smart.refresh.footer.ClassicsFooter
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+    </com.scwang.smart.refresh.layout.SmartRefreshLayout>-->
 
 
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
