--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,6 @@
     <color name="white_33ffffff">#33ffffff</color>
     <color name="white_99ffffff">#99ffffff</color>
     <color name="e6c590">#e6c590</color>
+    <color name="blue_4d1ee2ff">#4d1ee2ff</color>
+    <color name="gray_80000000">#80000000</color>
 </resources>
