--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
     <color name="e6c590">#e6c590</color>
     <color name="blue_4d1ee2ff">#4d1ee2ff</color>
     <color name="gray_80000000">#80000000</color>
+    <color name="gray_f8f8f8">#f8f8f8</color>
 </resources>
