--- a/app/src/main/res/layout/activity_hot_list.xml
+++ b/app/src/main/res/layout/activity_hot_list.xml
@@ -4,14 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_200"
     tools:context=".activity.components.HotListActivity">
+
+    <TextView
+        android:id="@+id/tvHotTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="热门精选"
+        android:textColor="@color/black_333333"
+        android:textSize="18sp"
+        android:layout_marginStart="22.5dp"
+        android:layout_marginTop="45dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="长按可拖拽排序"
+        android:textColor="@color/black_999999"
+        android:textSize="12sp"
+        android:layout_marginStart="9dp"
+        app:layout_constraintTop_toTopOf="@id/tvHotTitle"
+        app:layout_constraintBottom_toBottomOf="@id/tvHotTitle"
+        app:layout_constraintLeft_toRightOf="@id/tvHotTitle"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="19.5dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tvHotTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
