--- a/app/src/main/res/layout/item_drggble_view.xml
+++ b/app/src/main/res/layout/item_drggble_view.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
     app:cardElevation="0dp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginBottom="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +20,23 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:visibility="gone"
-            android:text="hhhh"
+            android:layout_marginStart="11.5dp"
+            android:layout_marginTop="15.5dp"
+            android:textColor="@color/black_333333"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            />
+
+        <ImageView
+            android:id="@+id/ivArrow"
+            android:layout_width="wrap_content"
+            android:layout_height="13dp"
+            android:src="@drawable/arrow"
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="@id/tvTitle"
+            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+            app:layout_constraintRight_toRightOf="parent"
             />
 
         <ImageView
@@ -26,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:visibility="gone"
+            android:layout_marginTop="15dp"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -36,7 +55,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/ivImage"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/ivIconUrl"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintTop_toBottomOf="@id/cvAdvertisingList"
             app:layout_constraintLeft_toLeftOf="parent"
             />
 
