--- a/app/src/main/res/layout/activity_viewpage.xml
+++ b/app/src/main/res/layout/activity_viewpage.xml
@@ -12,12 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:elevation="0dp"
+        android:layout_marginTop="40dp"
         android:minHeight="?attr/actionBarSize"
         android:paddingBottom="5dp"
         app:layout_collapseMode="pin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:tabIndicator="@drawable/shape_tab_indicator"
         app:tabIndicatorColor="#1990ff"
         app:tabIndicatorFullWidth="false"
