--- a/app/src/main/res/layout/activity_hot_list.xml
+++ b/app/src/main/res/layout/activity_hot_list.xml
@@ -8,34 +8,36 @@
     tools:context=".activity.components.HotListActivity">
 
 
-
-
-
     <TextView
         android:id="@+id/tvHotTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="22.5dp"
+        android:layout_marginTop="45dp"
         android:text="热门精选"
         android:textColor="@color/black_333333"
         android:textSize="18sp"
-        android:layout_marginStart="22.5dp"
-        android:layout_marginTop="45dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="9dp"
         android:text="长按可拖拽排序"
         android:textColor="@color/black_999999"
         android:textSize="12sp"
-        android:layout_marginStart="9dp"
-        app:layout_constraintTop_toTopOf="@id/tvHotTitle"
         app:layout_constraintBottom_toBottomOf="@id/tvHotTitle"
         app:layout_constraintLeft_toRightOf="@id/tvHotTitle"
-        />
+        app:layout_constraintTop_toTopOf="@id/tvHotTitle" />
+
+    <Button
+        android:id="@+id/btnInsert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
