--- a/app/src/main/res/layout/item_drggble_view.xml
+++ b/app/src/main/res/layout/item_drggble_view.xml
@@ -13,6 +13,15 @@
         android:layout_height="match_parent"
         >
 
+        <ImageView
+            android:id="@+id/ivClose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/close"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
