--- a/app/src/main/res/layout/activity_hot_list.xml
+++ b/app/src/main/res/layout/activity_hot_list.xml
@@ -37,10 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="开始"
-        app:layout_constraintTop_toTopOf="@id/tvHotTitle"
         app:layout_constraintBottom_toBottomOf="@id/tvHotTitle"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="@id/tvHotTitle" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -56,8 +55,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="19.5dp"
         android:text="----------------以上为展示区----------------"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/noShowRecyclerView"
