--- a/app/src/main/res/layout/item_drggble_view.xml
+++ b/app/src/main/res/layout/item_drggble_view.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="0dp"
     android:layout_marginHorizontal="5dp"
     android:layout_marginBottom="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/ivClose"
@@ -19,55 +18,50 @@
             android:layout_height="wrap_content"
             android:src="@drawable/close"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:visibility="gone"
             android:layout_marginStart="11.5dp"
             android:layout_marginTop="15.5dp"
             android:textColor="@color/black_333333"
             android:textSize="15sp"
             android:textStyle="bold"
-            />
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/ivArrow"
             android:layout_width="wrap_content"
             android:layout_height="13dp"
-            android:src="@drawable/arrow"
             android:layout_marginEnd="10dp"
+            android:src="@drawable/arrow"
             android:visibility="gone"
-            app:layout_constraintTop_toTopOf="@id/tvTitle"
             app:layout_constraintBottom_toBottomOf="@id/tvTitle"
             app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="@id/tvTitle" />
 
         <ImageView
             android:id="@+id/ivImage"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:visibility="gone"
             android:layout_marginTop="15dp"
+            android:visibility="gone"
             app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle"
             app:layout_constraintLeft_toLeftOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cvAdvertisingList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/ivImage"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/ivImage" />
 
         <ImageView
             android:id="@+id/ivIconUrl"
@@ -75,10 +69,8 @@
             android:layout_height="0dp"
             android:visibility="gone"
             app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintTop_toBottomOf="@id/cvAdvertisingList"
             app:layout_constraintLeft_toLeftOf="parent"
-            />
-
+            app:layout_constraintTop_toBottomOf="@id/cvAdvertisingList" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
