--- a/app/src/main/res/layout/item_drggble_view.xml
+++ b/app/src/main/res/layout/item_drggble_view.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/close"
+            android:visibility="gone"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,6 +51,8 @@
             android:layout_height="0dp"
             android:layout_marginTop="15dp"
             android:visibility="gone"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTitle" />
@@ -68,10 +71,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:visibility="gone"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cvAdvertisingList" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
